[package]
name = "command-builder"
version = "0.2.0"
authors = ["Ian Wahbe <ian@wahbe.com>"]
edition = "2018"
description = "A wrapper around std::process::Command that allows combining/chaining diffrent commands"
repository = "https://github.com/iwahbe/command-builder"
license = "MIT OR Apache-2.0"
keywords = ["shell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
